--- a/index.html
+++ b/index.html
@@ -5,132 +5,131 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanaka Shumba | Cybersecurity Portfolio</title>
 <style>
-/* Reset & basics */
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-body { background:#0f0f0f; color:#e0e0e0; overflow-x:hidden; }
-canvas#bgCanvas { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; }
+  /* General reset */
+  * { margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', sans-serif; }
 
-/* Header */
-header { background:rgba(17,17,17,0.9); padding:80px 20px; text-align:center; border-bottom:3px solid #00ff00; }
-header h1 { font-size:3em; color:#00ff00; margin-bottom:10px; }
-header p { font-size:1.2em; color:#aaa; }
+  body, html { width:100%; height:100%; background:#0d0d0d; color:#e0e0e0; overflow-x:hidden; }
 
-/* Sections */
-section { max-width:1000px; margin:60px auto; padding:0 20px; position:relative; z-index:1; }
-h2 { font-size:2em; color:#00ff00; text-align:center; margin-bottom:40px; }
+  /* Background 3D neon cubes effect */
+  canvas { position:fixed; top:0; left:0; z-index:-1; }
 
-/* About Me */
-#about-me { display:flex; flex-wrap:wrap; gap:40px; align-items:center; justify-content:center; }
-#about-me img { border-radius:50%; width:200px; height:200px; border:3px solid #00ff00; object-fit:cover; }
-#about-me .text { max-width:600px; font-size:1.1em; }
+  /* Header */
+  header { padding:60px 20px; text-align:center; background: rgba(0,0,0,0.85); }
+  header h1 { color:#00ff00; font-size:3em; margin-bottom:10px; }
+  header p { color:#00ffff; font-size:1.2em; }
 
-/* Projects */
-.projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:20px; }
-.project-card { background:rgba(26,26,26,0.9); padding:20px; border-radius:10px; border-left:4px solid #00ff00; transition:all 0.3s ease; }
-.project-card:hover { transform: translateY(-5px); box-shadow:0 0 15px #00ff00; }
-.project-card h3 { color:#00ff00; margin-bottom:10px; }
-.project-card p { color:#ccc; font-size:0.95em; }
-.project-card a { color:#00ff00; text-decoration:none; font-weight:bold; }
-.project-card a:hover { text-decoration:underline; }
+  /* Section titles */
+  h2 { color:#00ffff; margin-bottom:20px; border-bottom:1px solid #00ff00; padding-bottom:5px; }
 
-/* Contact */
-.contact a { color:#00ff00; text-decoration:none; font-weight:bold; }
-.contact a:hover { text-decoration:underline; }
+  /* About Me */
+  #about { padding:60px 20px; display:flex; flex-wrap:wrap; align-items:center; justify-content:center; }
+  #about img { width:200px; border-radius:50%; margin-right:40px; border:3px solid #00ff00; }
+  #about .bio { max-width:600px; font-size:1.1em; line-height:1.6; }
 
-/* Footer */
-footer { text-align:center; padding:30px 20px; font-size:0.9em; color:#666; border-top:1px solid #222; }
+  /* Projects */
+  #projects { padding:60px 20px; }
+  .project { background: rgba(0,255,0,0.05); border-left:4px solid #00ff00; margin-bottom:20px; padding:15px; transition:0.3s; }
+  .project:hover { background: rgba(0,255,0,0.15); }
+
+  /* Contact */
+  #contact { padding:60px 20px; text-align:center; }
+  #contact a { color:#00ffff; text-decoration:none; margin:0 10px; transition:0.3s; }
+  #contact a:hover { color:#00ff00; }
+
+  /* Responsive */
+  @media(max-width:768px){
+    #about { flex-direction:column; text-align:center; }
+    #about img { margin:0 0 20px 0; }
+  }
 </style>
 </head>
 <body>
 
+<!-- Canvas for 3D cubes -->
 <canvas id="bgCanvas"></canvas>
 
+<!-- Header -->
 <header>
-    <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity Professional | Python | Pen Testing | Threat Detection</p>
+  <h1>Tanaka Shumba</h1>
+  <p>Cybersecurity Professional | Threat Detection | Penetration Testing | Network Defense</p>
 </header>
 
-<section id="about-me">
-    <img src="images/about-me.jpg" alt="Tanaka Shumba">
-    <div class="text">
-        <h2>About Me</h2>
-        <p>I am a detail-oriented cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. My goal is to contribute to a SOC or cybersecurity team and strengthen organizational security posture.</p>
-    </div>
+<!-- About Me Section -->
+<section id="about">
+  <img src="images/about-me.jpg" alt="Tanaka Shumba">
+  <div class="bio">
+    <h2>About Me</h2>
+    <p>I am a detail-oriented cybersecurity professional destined for greatness. With a B.S. in Cybersecurity and ongoing M.S. studies, I specialize in threat detection, incident response, penetration testing, and network monitoring. Proficient in Python, security tools like Wireshark, Zeek, Snort, and Nmap, I transform complex security challenges into effective solutions. My goal is to contribute to a SOC or cybersecurity team and elevate organizational security posture.</p>
+  </div>
 </section>
 
+<!-- Projects Section -->
 <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-        <div class="project-card">
-            <h3>Malware Analyzer</h3>
-            <p>Python script simulating malware behavior analysis.</p>
-            <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-            <h3>Ethical Hacking Simulator</h3>
-            <p>Python scripts simulating ethical hacking techniques for learning purposes.</p>
-            <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-            <h3>Cloud Security Checker</h3>
-            <p>Simulates checking cloud service configurations for security.</p>
-            <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
-        </div>
-    </div>
+  <h2>Projects</h2>
+  <div class="project"><strong>Malware Analyzer:</strong> Python script simulating analysis of suspicious files.</div>
+  <div class="project"><strong>Ethical Hacking Sim:</strong> Python scripts simulating hacking techniques for learning.</div>
+  <div class="project"><strong>Cloud Security Checker:</strong> Python script for cloud misconfiguration checks.</div>
+  <div class="project"><strong>Basic Pen Test:</strong> Educational penetration testing tool.</div>
+  <div class="project"><strong>Simple IDS:</strong> IDS/IPS simulation in Python.</div>
+  <div class="project"><strong>Cybersecurity Lab Series:</strong> Python-based educational lab projects.</div>
+  <div class="project"><strong>Secure Hospital System:</strong> Python secure hospital management system.</div>
+  <div class="project"><strong>VoIP Traffic Analyzer:</strong> Captures and analyzes RTP packets.</div>
+  <div class="project"><strong>Python Network Scanner:</strong> Network scanning Python tool.</div>
+  <div class="project"><strong>Healthcare System:</strong> Flask-based healthcare management system.</div>
 </section>
 
+<!-- Contact Section -->
 <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:tanakashumba04@gmail.com">tanakashumba04@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">linkedin.com/in/tanakashumba-</a></p>
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:tanakashumba04@gmail.com">tanakashumba04@gmail.com</a></p>
+  <p>
+    <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+    <a href="https://github.com/TanakaShumba" target="_blank">GitHub</a>
+  </p>
 </section>
 
-<footer>
-    &copy; 2025 Tanaka Shumba. All rights reserved.
-</footer>
-
+<!-- 3D Neon Cubes Background -->
 <script>
-// 3D Neon Green Cubes Background
 const canvas = document.getElementById('bgCanvas');
 const ctx = canvas.getContext('2d');
-let w = canvas.width = window.innerWidth;
-let h = canvas.height = window.innerHeight;
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-class Cube {
-    constructor(){
-        this.x = Math.random() * w;
-        this.y = Math.random() * h;
-        this.size = Math.random() * 30 + 10;
-        this.angle = Math.random() * Math.PI * 2;
-        this.speed = Math.random() * 0.02 + 0.01;
-    }
-    update(){ this.angle += this.speed; }
-    draw(){
-        ctx.save();
-        ctx.translate(this.x, this.y);
-        ctx.rotate(this.angle);
-        ctx.strokeStyle = 'lime';
-        ctx.lineWidth = 2;
-        ctx.strokeRect(-this.size/2, -this.size/2, this.size, this.size);
-        ctx.restore();
-    }
+const cubes = [];
+for(let i=0;i<100;i++){
+  cubes.push({
+    x: Math.random()*canvas.width,
+    y: Math.random()*canvas.height,
+    z: Math.random()*500,
+    speed: Math.random()*2+0.5,
+    size: Math.random()*2+1
+  });
 }
 
-let cubes = [];
-for(let i=0;i<60;i++){ cubes.push(new Cube()); }
-
-function animate(){
-    ctx.clearRect(0,0,w,h);
-    cubes.forEach(c=>{ c.update(); c.draw(); });
-    requestAnimationFrame(animate);
+function draw(){
+  ctx.fillStyle = '#0d0d0d';
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  
+  cubes.forEach(c=>{
+    c.z -= c.speed;
+    if(c.z<1){ c.z = 500; c.x = Math.random()*canvas.width; c.y = Math.random()*canvas.height; }
+    
+    const k = 500/c.z;
+    const x = c.x*k + canvas.width/2 - canvas.width/2;
+    const y = c.y*k + canvas.height/2 - canvas.height/2;
+    
+    ctx.fillStyle = '#00ff00';
+    ctx.fillRect(x,y,c.size*k,c.size*k);
+  });
+  
+  requestAnimationFrame(draw);
 }
+draw();
 
 window.addEventListener('resize', ()=>{
-    w=canvas.width=window.innerWidth;
-    h=canvas.height=window.innerHeight;
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 });
-
-animate();
 </script>
 
 </body>
