--- a/index.html
+++ b/index.html
@@ -1,187 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tanaka Shumba | Cybersecurity Portfolio</title>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    background: #0b0b0b;
-    color: #fff;
-  }
-  header {
-    background: #001f3f;
-    padding: 50px 20px;
-    text-align: center;
-  }
-  header h1 {
-    margin: 0;
-    font-size: 3em;
-    color: #00ff00;
-  }
-  header p {
-    font-size: 1.2em;
-    color: #ccc;
-  }
-  section {
-    padding: 50px 20px;
-    max-width: 1000px;
-    margin: auto;
-  }
-  #about {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 20px;
-  }
-  #about img {
-    max-width: 250px;
-    border-radius: 10px;
-    flex-shrink: 0;
-  }
-  #about .text {
-    flex: 1;
-    min-width: 250px;
-  }
-  h2 {
-    color: #00bfff;
-    margin-bottom: 20px;
-  }
-  .projects-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-  }
-  .project-card {
-    background: #111;
-    border: 2px solid #00bfff;
-    padding: 20px;
-    border-radius: 10px;
-    transition: transform 0.3s, box-shadow 0.3s;
-    text-decoration: none;
-    color: #fff;
-  }
-  .project-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 0 20px #00bfff;
-  }
-  .project-card h3 {
-    margin-top: 0;
-    color: #00ff00;
-  }
-  .contact-form input, .contact-form textarea, .contact-form button {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: none;
-  }
-  .contact-form button {
-    background: #00bfff;
-    color: #fff;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  footer {
-    background: #001f3f;
-    text-align: center;
-    padding: 20px;
-    color: #ccc;
-  }
-  /* Subtle moving green particles background */
-  body::before {
-    content: '';
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    z-index: -1;
-    background: radial-gradient(circle, rgba(0,255,0,0.1) 1px, transparent 1px);
-    background-size: 20px 20px;
-    animation: moveBG 20s linear infinite;
-  }
-  @keyframes moveBG {
-    from {background-position: 0 0;}
-    to {background-position: 200px 200px;}
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanaka Shumba | Cybersecurity Portfolio</title>
+    <style>
+        /* Reset & basic styling */
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
+        body { background-color: #0a0a0a; color: #e0f7fa; line-height: 1.6; }
+        a { color: #00ff99; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+
+        /* Header & Navigation */
+        header { padding: 20px; text-align: center; background-color: #001f2f; }
+        header h1 { font-size: 2.5rem; color: #00ffff; }
+        nav { margin-top: 10px; }
+        nav a { margin: 0 15px; font-weight: bold; color: #00bfff; }
+
+        /* Sections */
+        section { padding: 60px 20px; max-width: 1000px; margin: 0 auto; }
+        h2 { font-size: 2rem; margin-bottom: 20px; color: #00ffff; }
+
+        /* About Me */
+        #about { display: flex; align-items: center; gap: 20px; flex-wrap: wrap; }
+        #about img { width: 200px; border-radius: 50%; border: 3px solid #00ff99; }
+        #about p { max-width: 700px; }
+
+        /* Projects */
+        #projects { background-color: #001f2f; border-radius: 10px; padding: 40px 20px; }
+        .project-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+        .project-card { background-color: #0a1a2a; padding: 20px; border-radius: 8px; transition: transform 0.3s, box-shadow 0.3s; }
+        .project-card:hover { transform: translateY(-5px); box-shadow: 0 0 15px #00ff99; }
+        .project-card h3 { margin-bottom: 10px; color: #00ff99; }
+
+        /* Contact */
+        #contact { background-color: #001f2f; border-radius: 10px; padding: 40px 20px; text-align: center; }
+        #contact a { display: inline-block; margin: 10px; font-size: 1.2rem; }
+
+        /* Footer */
+        footer { text-align: center; padding: 20px; color: #555; }
+
+        /* Background animation */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: radial-gradient(circle, rgba(0,255,0,0.1) 1px, transparent 1px);
+            background-size: 20px 20px;
+            z-index: -1;
+            animation: moveBg 20s linear infinite;
+        }
+        @keyframes moveBg { 0% { background-position: 0 0; } 100% { background-position: 1000px 1000px; } }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Tanaka Shumba</h1>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-<header>
-  <h1>Tanaka Shumba</h1>
-  <p>Cybersecurity Professional | Python, Network Security, Ethical Hacking</p>
-</header>
+    <section id="about">
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <div>
+            <h2>Hi, I'm Tanaka Shumba</h2>
+            <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges.</p>
+            <p>Beyond these projects, I am passionate about advancing in the cybersecurity field, constantly learning, and contributing to securing digital landscapes. This portfolio reflects both my technical expertise and my ambition to make an impact in the cybersecurity industry.</p>
+        </div>
+    </section>
 
-<section id="about">
-  <img src="images/about-me.jpg" alt="Tanaka Shumba">
-  <div class="text">
-    <h2>About Me</h2>
-    <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking opportunities to contribute to SOC and cybersecurity teams.</p>
-  </div>
-</section>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-grid">
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">Malware Analyzer</a></h3>
+                <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">Ethical Hacking Sim</a></h3>
+                <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">Cloud Security Checker</a></h3>
+                <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">Basic Pen Test</a></h3>
+                <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/simple-ids" target="_blank">Simple IDS</a></h3>
+                <p>A basic IDS/IPS simulation in Python for detecting and preventing attacks.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">Cybersecurity Lab Series</a></h3>
+                <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">Secure Hospital System</a></h3>
+                <p>Python-based secure hospital management system focusing on patient data security.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">VoIP Traffic Analyzer</a></h3>
+                <p>Python project that captures and analyzes VoIP RTP packets safely for educational use.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">Python Network Scanner</a></h3>
+                <p>Python tool for scanning networks and identifying connected devices and vulnerabilities.</p>
+            </div>
+            <div class="project-card">
+                <h3><a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">Healthcare System</a></h3>
+                <p>Flask-based healthcare management system to handle appointments, doctors, and payments.</p>
+            </div>
+        </div>
+    </section>
 
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects-container">
-    <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank" class="project-card">
-      <h3>malware-analyzer</h3>
-      <p>Python script simulating analyzing suspicious files and detecting potential malicious behaviors.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank" class="project-card">
-      <h3>ethical-hacking-sim</h3>
-      <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank" class="project-card">
-      <h3>cloud-security-checker</h3>
-      <p>Python script simulating checking cloud service configurations for common security misconfigurations.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank" class="project-card">
-      <h3>basic-pen-test</h3>
-      <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/simple-ids" target="_blank" class="project-card">
-      <h3>simple-ids</h3>
-      <p>A basic IDS/IPS simulation in Python.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank" class="project-card">
-      <h3>cybersecurity-lab-series</h3>
-      <p>Collection of cybersecurity lab exercises for learning and experimentation.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank" class="project-card">
-      <h3>secure-hospital-system</h3>
-      <p>Python-based secure hospital management system.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank" class="project-card">
-      <h3>voip-traffic-analyzer</h3>
-      <p>Python project capturing and analyzing VoIP RTP packets on a local network for educational use.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank" class="project-card">
-      <h3>python-network-scanner</h3>
-      <p>Python project for network scanning.</p>
-    </a>
-    <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank" class="project-card">
-      <h3>Healthcare_System</h3>
-      <p>Flask-based healthcare management system for appointments, doctors, and payments.</p>
-    </a>
-  </div>
-</section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out via email or LinkedIn:</p>
+        <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
+        <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+    </section>
 
-<section id="contact">
-  <h2>Contact</h2>
-  <div class="contact-form">
-    <input type="text" placeholder="Your Name" />
-    <input type="email" placeholder="Your Email" />
-    <textarea placeholder="Your Message"></textarea>
-    <button>Send Message</button>
-    <p>Connect with me: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank" style="color:#00bfff;">LinkedIn</a></p>
-  </div>
-</section>
-
-<footer>
-  &copy; 2025 Tanaka Shumba
-</footer>
-
+    <footer>
+        &copy; 2025 Tanaka Shumba
+    </footer>
 </body>
 </html>
