--- a/index.html
+++ b/index.html
@@ -3,253 +3,138 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfolio showcasing cybersecurity projects in threat detection, penetration testing, and secure systems.">
-  <title>Tanaka Shumba | Cybersecurity Portfolio</title>
-  <link rel="icon" href="profile.jpg">
+  <title>Tanaka Shumba Portfolio</title>
   <style>
-    /* ===== Global Styles ===== */
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #d9f0ff; /* light blue */
-      color: white;
-      line-height: 1.6;
-    }
-    header {
-      text-align: center;
-      padding: 3rem 1rem;
-    }
-    header img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 3px solid #39ff14; /* neon green */
-      box-shadow: 0 0 15px #39ff14;
-      margin-bottom: 1rem;
-    }
-    header h1 {
-      font-size: 2.5rem;
-      color: #003366; /* dark blue */
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #222;
-    }
+    /* Reset & basic styles */
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
+    body { background-color: #e0f7fa; color: #fff; line-height: 1.6; }
 
-    /* ===== Navigation ===== */
+    a { color: #00ff00; text-decoration: none; }
+
+    /* Navigation */
     nav {
       display: flex;
       justify-content: center;
-      background: #003366;
-      padding: 0.8rem;
+      background-color: #00796b;
+      padding: 1rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    nav a {
-      color: white;
-      margin: 0 1rem;
-      text-decoration: none;
+    nav a { margin: 0 1.5rem; font-weight: bold; }
+
+    /* Hero section */
+    .hero {
+      background: url('images/dovi.jpg') center/cover no-repeat;
+      height: 100vh;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .hero::after {
+      content: '';
+      position: absolute;
+      top:0; left:0; width:100%; height:100%;
+      background-color: rgba(0,0,0,0.5);
+      z-index:1;
+    }
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      max-width: 800px;
+    }
+    .hero-content h1 { font-size: 3rem; color: #00ff00; margin-bottom: 1rem; }
+    .hero-content p { font-size: 1.2rem; color: #fff; margin-bottom: 2rem; }
+
+    .btn {
+      padding: 0.8rem 1.5rem;
+      background-color: #00ff00;
+      color: #000;
       font-weight: bold;
-      transition: color 0.3s ease;
+      border-radius: 5px;
+      transition: 0.3s;
     }
-    nav a:hover {
-      color: #39ff14;
-    }
+    .btn:hover { background-color: #00b300; }
 
-    /* ===== Sections ===== */
-    section {
-      padding: 3rem 1rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    section h2 {
-      color: #39ff14; /* neon green */
-      margin-bottom: 1.5rem;
-    }
+    /* Sections */
+    section { padding: 5rem 2rem; max-width: 1000px; margin: auto; }
 
-    /* ===== Projects ===== */
-    .projects-grid {
+    h2 { font-size: 2rem; color: #00ff00; margin-bottom: 1.5rem; text-align: center; }
+
+    .projects {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
     }
-    .project-card {
-      background: rgba(0, 51, 102, 0.9); /* dark blue block */
+    .project {
+      background-color: rgba(0,0,0,0.7);
       padding: 1.5rem;
       border-radius: 10px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.3s;
     }
-    .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 15px #39ff14;
-    }
-    .project-card h3 {
-      margin-top: 0;
-      color: #39ff14;
-    }
-    .project-card p {
-      color: #eee;
-    }
-    .project-card small {
-      display: block;
-      margin-top: 0.5rem;
-      color: #bbb;
-    }
-    .project-card a {
-      display: inline-block;
-      margin-top: 0.8rem;
-      color: #39ff14;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .project-card a:hover {
-      text-decoration: underline;
-    }
+    .project:hover { transform: scale(1.05); }
+    .project h3 { margin-bottom: 0.5rem; color: #00ff00; }
+    .project p { font-size: 0.95rem; color: #fff; }
 
-    /* ===== Contact Form ===== */
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      background: rgba(0, 51, 102, 0.9);
-      padding: 2rem;
-      border-radius: 10px;
-    }
-    form input, form textarea {
-      padding: 0.8rem;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-    form button {
-      background: #39ff14;
-      border: none;
-      padding: 0.8rem;
-      font-size: 1rem;
-      cursor: pointer;
-      border-radius: 5px;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    form button:hover {
-      background: #2ecc71;
-    }
+    /* Contact */
+    .contact { text-align: center; }
+    .contact a { display: inline-block; margin: 0.5rem 1rem; padding: 0.5rem 1rem; background-color: #00ff00; color: #000; border-radius: 5px; font-weight: bold; }
+    .contact a:hover { background-color: #00b300; }
 
-    /* ===== Footer ===== */
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #003366;
-      margin-top: 2rem;
-      color: #fff;
-    }
+    footer { text-align: center; padding: 2rem 0; font-size: 0.9rem; color: #fff; background-color: #00796b; }
   </style>
 </head>
 <body>
-  <!-- ===== Header ===== -->
-  <header>
-    <img src="profile.jpg" alt="Profile Picture">
-    <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity Professional | Threat Detection | Penetration Testing | Cloud Security</p>
-  </header>
 
-  <!-- ===== Navigation ===== -->
   <nav>
-    <a href="#about">About</a>
+    <a href="#about">About Me</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- ===== About Me ===== -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hey there! Welcome to my portfolio. Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges.</p>
-    <p>Beyond these projects, I am passionate about advancing in the cybersecurity field, constantly learning, and contributing to securing digital landscapes. This portfolio reflects both my technical expertise and my ambition to make an impact in the cybersecurity industry.</p>
-  </section>
-
-  <!-- ===== Projects ===== -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project-card">
-        <h3>Malware Analyzer</h3>
-        <p>Python script simulating suspicious file analysis for potential malicious behaviors.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Malware-Analyzer" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Ethical Hacking Sim</h3>
-        <p>Python scripts simulating ethical hacking techniques for learning and demos.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Ethical-Hacking-Sim" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Cloud Security Checker</h3>
-        <p>Python script checking cloud service configurations for common misconfigurations.</p>
-        <small>Tech: Python, AWS</small>
-        <a href="https://github.com/TanakaShumba/Cloud-Security-Checker" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Basic Pen Test</h3>
-        <p>Educational penetration testing tool with simple vulnerability scanning.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Basic-Pen-Test" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Simple IDS</h3>
-        <p>Basic IDS/IPS simulation for detecting and preventing attacks.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Simple-IDS" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Cybersecurity Lab Series</h3>
-        <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
-        <small>Tech: Python, Linux</small>
-        <a href="https://github.com/TanakaShumba/Cybersecurity-Lab-Series" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Secure Hospital System</h3>
-        <p>Hospital management system focusing on patient data security.</p>
-        <small>Tech: Python, SQL</small>
-        <a href="https://github.com/TanakaShumba/Secure-Hospital-System" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>VoIP Traffic Analyzer</h3>
-        <p>Tool for capturing and analyzing VoIP RTP packets for learning.</p>
-        <small>Tech: Python, Networking</small>
-        <a href="https://github.com/TanakaShumba/VoIP-Traffic-Analyzer" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Python Network Scanner</h3>
-        <p>Scanner for networks to identify devices and vulnerabilities.</p>
-        <small>Tech: Python, Networking</small>
-        <a href="https://github.com/TanakaShumba/Python-Network-Scanner" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Healthcare System</h3>
-        <p>Healthcare management system to handle appointments, doctors, and payments.</p>
-        <small>Tech: Flask, Python, SQL</small>
-        <a href="https://github.com/TanakaShumba/Healthcare-System" target="_blank">View on GitHub</a>
-      </div>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Hey there!</h1>
+      <p>Welcome! This portfolio showcases my cybersecurity projects and skills while highlighting my ambitions to advance in the cybersecurity field.</p>
+      <a href="#projects" class="btn">View Projects</a>
     </div>
   </section>
 
-  <!-- ===== Contact ===== -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-    <p style="text-align:center; margin-top:1rem;">
-      Or connect via <a href="https://linkedin.com/in/tanakashumba-" target="_blank" style="color:#39ff14;">LinkedIn</a>
-    </p>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am a cybersecurity professional with hands-on experience in threat detection, penetration testing, and network security. This portfolio highlights my practical projects and demonstrates innovative solutions to modern security challenges. Beyond technical expertise, I am passionate about contributing to secure digital landscapes and growing as a professional in the cybersecurity industry.</p>
   </section>
 
-  <!-- ===== Footer ===== -->
+  <section id="projects">
+    <h2>My Projects</h2>
+    <div class="projects">
+      <div class="project">
+        <h3><a href="https://github.com/TanakaShumba/MalwareAnalyzer" target="_blank">Malware Analyzer</a></h3>
+        <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors.</p>
+      </div>
+      <div class="project">
+        <h3><a href="https://github.com/TanakaShumba/EthicalHackingSim" target="_blank">Ethical Hacking Sim</a></h3>
+        <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+      </div>
+      <div class="project">
+        <h3><a href="https://github.com/TanakaShumba/CloudSecurityChecker" target="_blank">Cloud Security Checker</a></h3>
+        <p>Python script to simulate checking cloud service configurations for security misconfigurations.</p>
+      </div>
+      <!-- Add more project blocks here -->
+    </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Me</h2>
+    <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
+    <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+  </section>
+
   <footer>
-    <p>© 2025 Tanaka Shumba</p>
+    © 2025 Tanaka Shumba
   </footer>
+
 </body>
 </html>
